--- a/templates/edit_newscaster.html
+++ b/templates/edit_newscaster.html
@@ -82,6 +82,10 @@
           <label for="sftp_remote_path" class="block text-sm font-medium text-gray-700">Sftp Remote Path:</label>
           <input type="text" id="sftp_remote_path" name="sftp_remote_path" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" value="{{ newscaster.sftp_remote_path }}" required>
       </div>
+      <div class="mb-4">
+        <label for="shift_timing" class="block text-sm font-medium text-gray-700">shift_timing:</label>
+        <input type="text" id="shift_timing" name="shift_timing" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" value="{{ newscaster.shift_timing }}" required>
+    </div>
     
                 <button type="submit"
                         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline-blue">
