--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="flex items-center justify-center mb-4">
                     <span class="text-green-500 pr-2">&#8592;</span> <!-- Left arrow emoji -->
-                    <a href="/Newscasters" class="text-sm font-semibold leading-6 text-black-900">Newscasters</a>
+                    <a href="/Newscasters" class="text-sm font-semibold leading-6 text-black-900">Radio Dj's</a>
                 </div>
 
                 <a href="/contactus" class="text-sm font-semibold leading-6 text-black-900">Contact us</a>
@@ -71,8 +71,8 @@
                     Welcome,
                     <span class="text-blue-500 font-semibold">{{ user.username }}</span>!
                 </p>
-                <a href="/fetching-meta-data"
-                    class="text-sm font-semibold leading-6 text-black-900">Fetching meta data of songs</a>
+                <a href="/azuracast"
+                    class="text-sm font-semibold leading-6 text-black-900">Song Annouce</a>
                 <a href="/admin" class="text-sm font-semibold leading-6 text-black-900">Admin Panel</a>
                 <a href="{% url 'rss_to_audio_app:logout' %}"
                     class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600">Logout</a>
