--- a/templates/add_newscaster.html
+++ b/templates/add_newscaster.html
@@ -223,26 +223,26 @@
               
                 <div class="mb-4">
                     <label for="voice" class="block text-sm font-medium text-gray-700">Voice:</label>
-                    <input type="text" id="voice" name="voice" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-white" required>
+                    <input type="text" id="voice" name="voice" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" required>
                 </div>
                 <div class="mb-4">
                   <label for="sftp_host" class="block text-sm font-medium text-gray-700">Sftp Host:</label>
-                  <input type="text" id="sftp_host" name="sftp_host" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-white" required>
+                  <input type="text" id="sftp_host" name="sftp_host" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" required>
               </div>
               <div class="mb-4">
                 <label for="sftp_port" class="block text-sm font-medium text-gray-700">Sftp Port:</label>
-                <input type="text" id="sftp_port" name="sftp_port" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-white" required>
+                <input type="text" id="sftp_port" name="sftp_port" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" required>
             </div>
             <div class="mb-4">
               <label for="sftp_username" class="block text-sm font-medium text-gray-700">Sftp Username:</label>
-              <input type="text" id="sftp_username" name="sftp_username" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-white" required>
+              <input type="text" id="sftp_username" name="sftp_username" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" required>
           </div>
           <div class="mb-4">
             <label for="sftp_password" class="block text-sm font-medium text-gray-700">Sftp Password:</label>
             <input type="text" id="sftp_password" name="sftp_password" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" required>
         </div>
         <div class="mb-4">
-          <label for="sftp_remote_path" class="block text-sm font-medium text-gray-700">Sftp Remote Path:</label>
+          <label for="sftp_remote_path" class="block text-sm font-medium text-gray-700">Sftp Reote Path:</label>
           <input type="text" id="sftp_remote_path" name="sftp_remote_path" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-blue-500 text-black" required>
       </div>
                 <br/>
@@ -251,7 +251,7 @@
 
     
                 <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mx-auto block">
-                    Save Newscaster
+                    Save Radio Dj
                 </button>
             </form>
           
