--- a/templates/enter_outro.html
+++ b/templates/enter_outro.html
@@ -29,7 +29,6 @@
     </style>
   </head>
   {% include 'navbar.html' %}
-
   <body class="bg-gray-100 flex items-center justify-center h-screen dark-mode">
     <div class="max-w-md w-full p-8 rounded-md shadow-md bg-black">
       <h2 class="text-2xl font-bold mb-6 text-center text-white">
@@ -84,6 +83,24 @@
         document.querySelector('textarea[name="outro_text"]').value =
           suggestion;
       }
+    </script>
+    <script>
+      // Update the current year dynamically
+      document.getElementById('dropdown-button').addEventListener('click', function () {
+        var menu = document.getElementById('dropdown-menu');
+        menu.classList.toggle('hidden');
+        menu.classList.toggle('block');
+    });
+    
+    document.addEventListener('click', function (event) {
+        var menu = document.getElementById('dropdown-menu');
+        var button = document.getElementById('dropdown-button');
+    
+        if (!menu.contains(event.target) && !button.contains(event.target)) {
+            menu.classList.add('hidden');
+            menu.classList.remove('block');
+        }
+    });
     </script>
   </body>
 </html>
